--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,25 @@
   <meta charset="utf-8">
   <title>SportTimerApp</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#4f46e5">
   <meta name="description" content="Track your exercises and workouts with timed intervals">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="Sport Timer">
   <link rel="apple-touch-icon" href="icons/icon-192x192.png">
+  
+  <!-- Additional iOS PWA meta tags -->
+  <link rel="apple-touch-icon" sizes="152x152" href="icons/icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-192x192.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="icons/icon-152x152.png">
+  <link rel="apple-touch-startup-image" href="icons/icon-512x512.png">
+  <meta name="apple-touch-fullscreen" content="yes">
+  
+  <!-- Explicitly indicate PWA readiness for better mobile installation prompts -->
+  <meta name="mobile-web-app-capable" content="yes">
 </head>
 <body>
   <app-root></app-root>
